--- a/index.html
+++ b/index.html
@@ -12,34 +12,103 @@
 </head>
 
 <body>
-  10,000+ of our users love our products.
-
-  We only provide great products combined with excellent customer service.
-  See what our satisfied customers are saying about our services.
-
-  Rated 5 Stars in Reviews
-  Rated 5 Stars in Report Guru
-  Rated 5 Stars in BestTech
-
-  Colton Smith
-  Verified Buyer
-  "We needed the same printed design as the one we had ordered a week prior.
-  Not only did they find the original order, but we also received it in time.
-  Excellent!"
-
-  Irene Roberts
-  Verified Buyer
-  "Customer service is always excellent and very quick turn around. Completely
-  delighted with the simplicity of the purchase and the speed of delivery."
-
-  Anne Wallace
-  Verified Buyer
-  "Put an order with this company and can only praise them for the very high
-  standard. Will definitely use them again and recommend them to everyone!"
+  <div class="container">
+    <div class="upper">
+      <h1>10,000+ of our users love our products.</h1>
+      <p>We only provide great products combined with excellent customer service.
+        See what our satisfied customers are saying about our services.</p>
+    </div>
+    <div class="middle">
+      <div class="rating">
+        <div class="star">
+          <img src="./images/icon-star.svg" alt="">
+          <img src="./images/icon-star.svg" alt="">
+          <img src="./images/icon-star.svg" alt="">
+          <img src="./images/icon-star.svg" alt="">
+          <img src="./images/icon-star.svg" alt="">
+        </div>
+        <div class="rate">
+          Rated 5 Stars in Reviews
+        </div>
+      </div>
+      <div class="rating">
+        <div class="star">
+          <img src="./images/icon-star.svg" alt="">
+          <img src="./images/icon-star.svg" alt="">
+          <img src="./images/icon-star.svg" alt="">
+          <img src="./images/icon-star.svg" alt="">
+          <img src="./images/icon-star.svg" alt="">
+        </div>
+        <div class="rate">
+          Rated 5 Stars in Report Guru
+        </div>
+      </div>
+      <div class="rating">
+        <div class="star">
+          <img src="./images/icon-star.svg" alt="">
+          <img src="./images/icon-star.svg" alt="">
+          <img src="./images/icon-star.svg" alt="">
+          <img src="./images/icon-star.svg" alt="">
+          <img src="./images/icon-star.svg" alt="">
+        </div>
+        <div class="rate">
+          Rated 5 Stars in BestTech
+        </div>
+      </div>
+      </div>
+    <div class="lower">
+      <div class="card">
+        <div class="title">
+          <div class="image">
+            <img src="./images/image-colton.jpg" alt="">
+          </div>
+          <div class="name">
+            <h3>Colton Smith</h3>
+            <h4>Verified Buyer</h4>
+          </div>
+        </div>
+        <div class="info">
+          <p>"We needed the same printed design as the one we had ordered a week prior.
+            Not only did they find the original order, but we also received it in time.
+            Excellent!"</p>
+        </div>
+      </div>
+      <div class="card">
+        <div class="title">
+          <div class="image">
+            <img src="./images/image-irene.jpg" alt="">
+          </div>
+          <div class="name">
+            <h3>Irene Roberts</h3>
+            <h4>Verified Buyer</h4>
+          </div>
+        </div>
+        <div class="info">
+          <p>"Customer service is always excellent and very quick turn around. Completely
+            delighted with the simplicity of the purchase and the speed of delivery."</p>
+        </div>
+      </div>
+      <div class="card">
+        <div class="title">
+          <div class="image">
+            <img src="./images/image-anne.jpg" alt="">
+          </div>
+          <div class="name">
+            <h3>Anne Wallace</h3>
+            <h4>Verified Buyer</h4>
+          </div>
+        </div>
+        <div class="info">
+          <p>"Put an order with this company and can only praise them for the very high
+            standard. Will definitely use them again and recommend them to everyone!"</p>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <div class="attribution">
     Challenge by
-    <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="#">Your Name Here</a>.
+    <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="#">Noyon Dey</a>.
   </div>
 </body>
 
