--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         See what our satisfied customers are saying about our services.</p>
     </div>
     <div class="middle">
-      <div class="rating">
+      <div class="rating one">
         <div class="star">
           <img src="./images/icon-star.svg" alt="">
           <img src="./images/icon-star.svg" alt="">
@@ -31,7 +31,7 @@
           Rated 5 Stars in Reviews
         </div>
       </div>
-      <div class="rating">
+      <div class="rating two">
         <div class="star">
           <img src="./images/icon-star.svg" alt="">
           <img src="./images/icon-star.svg" alt="">
@@ -43,7 +43,7 @@
           Rated 5 Stars in Report Guru
         </div>
       </div>
-      <div class="rating">
+      <div class="rating three">
         <div class="star">
           <img src="./images/icon-star.svg" alt="">
           <img src="./images/icon-star.svg" alt="">
@@ -57,7 +57,7 @@
       </div>
       </div>
     <div class="lower">
-      <div class="card">
+      <div class="card down_one">
         <div class="title">
           <div class="image">
             <img src="./images/image-colton.jpg" alt="">
@@ -68,12 +68,11 @@
           </div>
         </div>
         <div class="info">
-          <p>"We needed the same printed design as the one we had ordered a week prior.
-            Not only did they find the original order, but we also received it in time.
-            Excellent!"</p>
+          <p>" We needed the same printed design as the one we had ordered a week prior.
+            Not only did they find the original order, but we also received it in time. Excellent! "</p>
         </div>
       </div>
-      <div class="card">
+      <div class="card down_two">
         <div class="title">
           <div class="image">
             <img src="./images/image-irene.jpg" alt="">
@@ -84,11 +83,11 @@
           </div>
         </div>
         <div class="info">
-          <p>"Customer service is always excellent and very quick turn around. Completely
-            delighted with the simplicity of the purchase and the speed of delivery."</p>
+          <p>" Customer service is always excellent and very quick turn around. Completely
+            delighted with the simplicity of the purchase and the speed of delivery. "</p>
         </div>
       </div>
-      <div class="card">
+      <div class="card down_three">
         <div class="title">
           <div class="image">
             <img src="./images/image-anne.jpg" alt="">
@@ -99,8 +98,8 @@
           </div>
         </div>
         <div class="info">
-          <p>"Put an order with this company and can only praise them for the very high
-            standard. Will definitely use them again and recommend them to everyone!"</p>
+          <p>" Put an order with this company and can only praise them for the very high
+            standard. Will definitely use them again and recommend them to everyone! "</p>
         </div>
       </div>
     </div>
